--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -52,9 +52,11 @@ body {
 
   main {
     .section__services {
-      background-image: url("../img/fond 1.png");
+      background-color: $pink;
+      background-image: url("../img/rond2.png");
       background-repeat: no-repeat;
-      background-size: cover;
+      background-position: 515px;
+      background-size: 595px 635px;
       height: 640px;
       width: 1111px;
       margin: 0 auto 160px;
@@ -169,7 +171,7 @@ body {
 
         a:hover {
           img {
-            opacity: .5;
+            opacity: 0.5;
           }
         }
       }
@@ -197,14 +199,13 @@ body {
               h1 {
                 @include projectsH;
               }
-
             }
           }
         }
 
         a:hover {
           img {
-            opacity: .5;
+            opacity: 0.5;
           }
         }
       }
@@ -222,7 +223,6 @@ body {
             width: 541px;
             height: 308px;
 
-
             .projects__graphic__text {
               position: absolute;
               top: 50%;
@@ -235,14 +235,13 @@ body {
                 text-align: center;
                 @include projectsH;
               }
-
             }
           }
         }
 
         a:hover {
           img {
-            opacity: .5;
+            opacity: 0.5;
           }
         }
       }
