add bg indexcircle

--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -55,8 +55,8 @@ body {
       background-color: $pink;
       background-image: url("../img/rond2.png");
       background-repeat: no-repeat;
-      background-position: 515px;
-      background-size: 595px 635px;
+      background-size: 610px 640px;
+      background-position: right;
       height: 640px;
       width: 1111px;
       margin: 0 auto 160px;
