--- a/src/css/style.css
+++ b/src/css/style.css
@@ -57,8 +57,8 @@ body main .section__services {
   background-color: rgb(231, 129, 107);
   background-image: url("../img/rond2.png");
   background-repeat: no-repeat;
-  background-position: 515px;
-  background-size: 595px 635px;
+  background-size: 610px 640px;
+  background-position: right;
   height: 640px;
   width: 1111px;
   margin: 0 auto 160px;
