add queries webdesign

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -542,7 +542,17 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   cursor: pointer;
 }
 
-.section__solutions__design {
+@media screen and (max-width: 375px) {
+  body {
+    max-width: 375px;
+  }
+}
+@media screen and (max-width: 375px) {
+  body header nav {
+    display: none;
+  }
+}
+body .section__solutions__design {
   color: rgb(255, 255, 255);
   width: 1111px;
   height: 252px;
@@ -558,11 +568,17 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.section__solutions__design div {
+@media screen and (max-width: 375px) {
+  body .section__solutions__design {
+    width: 292px;
+    height: 292px;
+  }
+}
+body .section__solutions__design div {
   margin-left: 190px;
   margin-right: 191px;
 }
-.section__solutions__design div h2 {
+body .section__solutions__design div h2 {
   height: 48px;
   font-family: "Jost", sans-serif;
   font-style: normal;
@@ -572,7 +588,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   margin-bottom: 24px;
   text-align: center;
 }
-.section__solutions__design div p {
+body .section__solutions__design div p {
   height: 52px;
   width: 730px;
   font-family: "Jost", sans-serif;
@@ -582,8 +598,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   line-height: 26px;
   text-align: center;
 }
-
-.section__tech {
+body .section__tech {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -594,14 +609,26 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   width: 1110px;
   height: 988px;
 }
-.section__tech .tech__div {
+@media screen and (max-width: 375px) {
+  body .section__tech {
+    width: 327px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+body .section__tech .tech__div {
   width: 350px;
   height: 478px;
   text-align: center;
   background-color: rgb(253, 243, 240);
   border-radius: 15px;
 }
-.section__tech .tech__div h2 {
+body .section__tech .tech__div h2 {
   margin-top: 30px;
   margin-bottom: 16px;
   color: rgb(231, 129, 107);
@@ -611,7 +638,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   font-size: 20px;
   line-height: 26px;
 }
-.section__tech .tech__div p {
+body .section__tech .tech__div p {
   margin: 0 auto;
   width: 286px;
   font-family: "Jost", sans-serif;
@@ -620,22 +647,33 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   font-size: 16px;
   line-height: 26px;
 }
-.section__tech .tech__div:hover {
+body .section__tech .tech__div:hover {
   background-color: rgb(231, 129, 107);
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
-.section__tech .tech__div:hover h2 {
+body .section__tech .tech__div:hover h2 {
   color: rgb(255, 255, 255);
 }
-
-.projects__graphic__design {
+body .projects__graphic__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a {
+@media screen and (max-width: 375px) {
+  body .projects__graphic__design {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 327px;
+  }
+}
+body .projects__graphic__design a {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -646,12 +684,12 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__graphic__design a .projects__graphic__design__img {
+body .projects__graphic__design a .projects__graphic__design__img {
   position: relative;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text {
+body .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -668,7 +706,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text h1 {
+body .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text h1 {
   width: 400px;
   text-align: center;
   font-family: "Jost", sans-serif;
@@ -681,22 +719,21 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   text-transform: uppercase;
   margin-bottom: 24px;
 }
-.projects__graphic__design a:hover img {
+body .projects__graphic__design a:hover img {
   opacity: 0.5;
 }
-
-.projects__app__design {
+body .projects__app__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-.projects__app__design a .projects__app__design__img {
+body .projects__app__design a .projects__app__design__img {
   position: relative;
   width: 541px;
   height: 308px;
 }
-.projects__app__design a .projects__app__design__img .projects__app__design__text {
+body .projects__app__design a .projects__app__design__img .projects__app__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -713,7 +750,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__app__design a .projects__app__design__img .projects__app__design__text h1 {
+body .projects__app__design a .projects__app__design__img .projects__app__design__text h1 {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -724,7 +761,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   text-transform: uppercase;
   margin-bottom: 24px;
 }
-.projects__app__design a .projects__app__design__img .projects__app__design__text p {
+body .projects__app__design a .projects__app__design__img .projects__app__design__text p {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -735,17 +772,16 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__app__design a:hover img {
+body .projects__app__design a:hover img {
   opacity: 0.5;
 }
-
-.projects__web__design {
+body .projects__web__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-.projects__web__design a {
+body .projects__web__design a {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -756,17 +792,17 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__web__design a .projects__web__design__img {
+body .projects__web__design a .projects__web__design__img {
   position: relative;
 }
-.projects__web__design a .projects__web__design__img .web {
+body .projects__web__design a .projects__web__design__img .web {
   width: 541px;
   height: 308px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px;
 }
-.projects__web__design a .projects__web__design__img .projects__web__design__text {
+body .projects__web__design a .projects__web__design__img .projects__web__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -783,7 +819,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__web__design a .projects__web__design__img .projects__web__design__text h1 {
+body .projects__web__design a .projects__web__design__img .projects__web__design__text h1 {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -794,7 +830,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   text-transform: uppercase;
   margin-bottom: 24px;
 }
-.projects__web__design a:hover img {
+body .projects__web__design a:hover img {
   opacity: 0.5;
 }
 
