--- a/src/sass/_webdesign.scss
+++ b/src/sass/_webdesign.scss
@@ -9,9 +9,11 @@
   margin-bottom: 160px;
   display: flex;
   align-items: center;
+
   div {
     margin-left: 190px;
     margin-right: 191px;
+
     h2 {
       height: 48px;
       font-family: $fontJ;
@@ -22,6 +24,7 @@
       margin-bottom: 24px;
       text-align: center;
     }
+
     p {
       height: 52px;
       width: 730px;
@@ -34,19 +37,23 @@
     }
   }
 }
+
 .section__tech {
+
   display: flex;
   flex-wrap: wrap;
   gap: 30px;
   margin: 0 auto 192px;
   width: 1110px;
   height: 988px;
+
   .tech__div {
     width: 350px;
     height: 478px;
     text-align: center;
     background-color: $pinkBg;
     border-radius: 15px;
+
     h2 {
       margin-top: 30px;
       margin-bottom: 16px;
@@ -57,6 +64,7 @@
       font-size: 20px;
       line-height: 26px;
     }
+
     p {
       margin: 0 auto;
       width: 286px;
@@ -68,11 +76,12 @@
     }
   }
 }
+
 .projects__graphic__design {
 
   .projects__graphic__design__img {
     position: relative;
-    width:541px ;
+    width: 541px;
     height: 308px;
 
     .projects__graphic__design__text {
@@ -94,11 +103,12 @@
     }
   }
 }
+
 .projects__app__design {
 
   .projects__app__design__img {
     position: relative;
-    width:541px ;
+    width: 541px;
     height: 308px;
 
 
@@ -119,15 +129,18 @@
     }
   }
 }
+
 .projects__web__design {
   .projects__web__design__img {
     position: relative;
-    .web{
+
+    .web {
       width: 541px;
       height: 308px;
-      object-fit:cover ;
+      object-fit: cover;
       border-radius: 15px;
     }
+
     .projects__web__design__text {
       position: absolute;
       top: 50%;
@@ -144,4 +157,40 @@
       }
     }
   }
+}
+
+@media(max-width: 375px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+
+    header {
+      nav{
+        display: none;
+      }
+    }
+
+    main {
+      .section__solutions__design{
+        h2{
+          align-items: center;
+        }
+      }
+
+      .section__tech {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+      }
+      .section__projects{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: nowrap;
+      }
+    }
+
+  }
+
+
 }
