--- a/src/css/style.css
+++ b/src/css/style.css
@@ -619,7 +619,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   cursor: pointer;
 }
 
-.section__solutions__design {
+body .section__solutions__design {
   color: rgb(255, 255, 255);
   width: 1111px;
   height: 252px;
@@ -635,19 +635,11 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-@media (max-width: 375px) {
-  .section__solutions__design {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-.section__solutions__design div {
+body .section__solutions__design div {
   margin-left: 190px;
   margin-right: 191px;
 }
-.section__solutions__design div h2 {
+body .section__solutions__design div h2 {
   height: 48px;
   font-family: "Jost", sans-serif;
   font-style: normal;
@@ -657,7 +649,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   margin-bottom: 24px;
   text-align: center;
 }
-.section__solutions__design div p {
+body .section__solutions__design div p {
   height: 52px;
   width: 730px;
   font-family: "Jost", sans-serif;
@@ -667,8 +659,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   line-height: 26px;
   text-align: center;
 }
-
-.section__tech {
+body .section__tech {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -679,17 +670,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   width: 1110px;
   height: 988px;
 }
-@media (max-width: 375px) {
-  .section__tech {
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-.section__tech .tech__div {
+body .section__tech .tech__div {
   width: 350px;
   height: 478px;
   text-align: center;
@@ -698,7 +679,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
-.section__tech .tech__div h2 {
+body .section__tech .tech__div h2 {
   margin-top: 30px;
   margin-bottom: 16px;
   color: rgb(231, 129, 107);
@@ -708,30 +689,16 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   font-size: 20px;
   line-height: 26px;
 }
-.section__tech .tech__div h2 {
+body .section__tech .tech__div h2 {
   color: rgb(255, 255, 255);
 }
-
-.projects__graphic__design {
+body .projects__graphic__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-@media (max-width: 375px) {
-  .projects__graphic__design {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: nowrap;
-        flex-wrap: nowrap;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-.projects__graphic__design a {
+body .projects__graphic__design a {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -742,12 +709,12 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__graphic__design a .projects__graphic__design__img {
+body .projects__graphic__design a .projects__graphic__design__img {
   position: relative;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text {
+body .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -764,11 +731,11 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text h1 {
+body .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text h1 {
   width: 400px;
   text-align: center;
 }
-.projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text p {
+body .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text p {
   height: 52px;
   width: 730px;
   font-family: "Jost", sans-serif;
@@ -778,7 +745,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   line-height: 26px;
   text-align: center;
 }
-.projects__graphic__design a .section__tech {
+body .projects__graphic__design a .section__tech {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -789,26 +756,14 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   width: 1110px;
   height: 988px;
 }
-@media screen and (max-width: 375px) {
-  .projects__graphic__design a .section__tech {
-    width: 327px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-  }
-}
-.projects__graphic__design a .section__tech .tech__div {
+body .projects__graphic__design a .section__tech .tech__div {
   width: 350px;
   height: 478px;
   text-align: center;
   background-color: rgb(253, 243, 240);
   border-radius: 15px;
 }
-.projects__graphic__design a .section__tech .tech__div h2 {
+body .projects__graphic__design a .section__tech .tech__div h2 {
   margin-top: 30px;
   margin-bottom: 16px;
   color: rgb(231, 129, 107);
@@ -818,7 +773,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   font-size: 20px;
   line-height: 26px;
 }
-.projects__graphic__design a .section__tech .tech__div p {
+body .projects__graphic__design a .section__tech .tech__div p {
   margin: 0 auto;
   width: 286px;
   font-family: "Jost", sans-serif;
@@ -827,33 +782,21 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   font-size: 16px;
   line-height: 26px;
 }
-.projects__graphic__design a .section__tech .tech__div:hover {
+body .projects__graphic__design a .section__tech .tech__div:hover {
   background-color: rgb(231, 129, 107);
   color: rgb(255, 255, 255);
   cursor: pointer;
 }
-.projects__graphic__design a .section__tech .tech__div:hover h2 {
+body .projects__graphic__design a .section__tech .tech__div:hover h2 {
   color: rgb(255, 255, 255);
 }
-.projects__graphic__design a .projects__graphic__design {
+body .projects__graphic__design a .projects__graphic__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-@media screen and (max-width: 375px) {
-  .projects__graphic__design a .projects__graphic__design {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 327px;
-  }
-}
-.projects__graphic__design a .projects__graphic__design a {
+body .projects__graphic__design a .projects__graphic__design a {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -864,12 +807,12 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__graphic__design a .projects__graphic__design a .projects__graphic__design__img {
+body .projects__graphic__design a .projects__graphic__design a .projects__graphic__design__img {
   position: relative;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text {
+body .projects__graphic__design a .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -886,7 +829,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__graphic__design a .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text h1 {
+body .projects__graphic__design a .projects__graphic__design a .projects__graphic__design__img .projects__graphic__design__text h1 {
   width: 400px;
   text-align: center;
   font-family: "Jost", sans-serif;
@@ -899,21 +842,21 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   text-transform: uppercase;
   margin-bottom: 24px;
 }
-.projects__graphic__design a .projects__graphic__design a:hover img {
+body .projects__graphic__design a .projects__graphic__design a:hover img {
   opacity: 0.5;
 }
-.projects__graphic__design a .projects__app__design {
+body .projects__graphic__design a .projects__app__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a .projects__app__design a .projects__app__design__img {
+body .projects__graphic__design a .projects__app__design a .projects__app__design__img {
   position: relative;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a .projects__app__design a .projects__app__design__img .projects__app__design__text {
+body .projects__graphic__design a .projects__app__design a .projects__app__design__img .projects__app__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -930,7 +873,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__graphic__design a .projects__app__design a .projects__app__design__img .projects__app__design__text h1 {
+body .projects__graphic__design a .projects__app__design a .projects__app__design__img .projects__app__design__text h1 {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -941,7 +884,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   text-transform: uppercase;
   margin-bottom: 24px;
 }
-.projects__graphic__design a .projects__app__design a .projects__app__design__img .projects__app__design__text p {
+body .projects__graphic__design a .projects__app__design a .projects__app__design__img .projects__app__design__text p {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -952,16 +895,16 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__graphic__design a .projects__app__design a:hover img {
+body .projects__graphic__design a .projects__app__design a:hover img {
   opacity: 0.5;
 }
-.projects__graphic__design a .projects__web__design {
+body .projects__graphic__design a .projects__web__design {
   background-color: rgb(231, 129, 107);
   border-radius: 15px;
   width: 541px;
   height: 308px;
 }
-.projects__graphic__design a .projects__web__design a {
+body .projects__graphic__design a .projects__web__design a {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -972,17 +915,17 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   color: rgb(255, 255, 255);
   text-decoration: none;
 }
-.projects__graphic__design a .projects__web__design a .projects__web__design__img {
+body .projects__graphic__design a .projects__web__design a .projects__web__design__img {
   position: relative;
 }
-.projects__graphic__design a .projects__web__design a .projects__web__design__img .web {
+body .projects__graphic__design a .projects__web__design a .projects__web__design__img .web {
   width: 541px;
   height: 308px;
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 15px;
 }
-.projects__graphic__design a .projects__web__design a .projects__web__design__img .projects__web__design__text {
+body .projects__graphic__design a .projects__web__design a .projects__web__design__img .projects__web__design__text {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -999,7 +942,7 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
       -ms-flex-align: center;
           align-items: center;
 }
-.projects__graphic__design a .projects__web__design a .projects__web__design__img .projects__web__design__text h1 {
+body .projects__graphic__design a .projects__web__design a .projects__web__design__img .projects__web__design__text h1 {
   font-family: "Jost", sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -1010,10 +953,73 @@ body footer .lower__container .inline__lower__container .section__media ul li i:
   text-transform: uppercase;
   margin-bottom: 24px;
 }
-.projects__graphic__design a .projects__web__design a:hover img {
+body .projects__graphic__design a .projects__web__design a:hover img {
   opacity: 0.5;
 }
 
+@media screen and (max-width: 375px) {
+  body header img {
+    width: 375px;
+  }
+  body header nav {
+    display: none;
+  }
+  body .section__solutions__design {
+    width: 375px;
+    height: 320px;
+    background-color: rgb(231, 129, 107);
+    background-image: none;
+  }
+  body .section__solutions__design div {
+    margin-left: 24px;
+    margin-right: 24px;
+  }
+  body .section__solutions__design div h2 {
+    font-family: "Jost", sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 36px;
+    text-align: center;
+    width: 327px;
+    height: 36px;
+  }
+  body .section__solutions__design div p {
+    font-family: "Jost", sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 25px;
+    text-align: center;
+    width: 327px;
+    height: 50px;
+  }
+  body .section__solutions__design div p br {
+    display: none;
+  }
+  body .section__tech {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+  body .section__projects {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+  }
+}
 body {
   width: 1440px;
 }
